Update dark-gray to new colour. Fix small spacing underneath link tile
..for long link tile titles

--- a/source/assets/stylesheets/_variables.scss
+++ b/source/assets/stylesheets/_variables.scss
@@ -13,7 +13,7 @@ $orange: #FDAD2B;
 $yellow: #FED336;
 
 $black: #000000;
-$dark-gray: #3B3B3B;
+$dark-gray: #313131;
 $medium-gray: #767676;
 $light-gray: #F7F7F7;
 $white: #FFFFFF;
